# PM

./: .clang  .clang-format  .clang-tidy  .clang_complete  .gitignore  .gitlab-ci.yml  .gitmodules  .tags  .tags_sorted_by_file  CG_overall_2021_06_02 (conflicted).csv  CG_overall_2021_06_02.csv  CG_overall_2021_06_12.csv  CG_overall_2021_06_15.csv  CG_overall_21_05_26.csv  CG_overall_21_05_27.csv  CG_overall_21_05_28.csv  CG_overall_21_05_31.csv  CG_overall_21_06_01 (conflicted).csv  CG_overall_21_06_01.csv  CG_overall_21_06_02.csv  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  WCTproject.sublime-project  before_script.sh  compile_commands.json  gurobi.env  pm.code-workspace  test_start.sh  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml
.gitlab/: .gitlab-ci.yml
.gitlab/issue_templates/: Bug.md  Feature.md
.gitlab/merge_request_templates/: default.md
Results Windows/: results_2021_12_07.csv
TueServer_results/: oliveira_overall.csv  summary.ipynb  summary.py
TueServer_results/results/results_2021_06_17/: profile_curve_overall_2021_06_17.tex  profile_curve_overall_40_2_2021_06_17.tex  profile_curve_overall_40_4_2021_06_17.tex  profile_curve_overall_50_2_2021_06_17.tex  profile_curve_overall_50_4_2021_06_17.tex
TueServer_results/results/results_2021_06_18/: TUE_server_results_2021_06_18.csv  profile_curve_overall_100_2_2021_06_18.tex  profile_curve_overall_100_4_2021_06_18.tex  profile_curve_overall_2021_06_18.tex  profile_curve_overall_40_2_2021_06_18.tex  profile_curve_overall_40_4_2021_06_18.tex  profile_curve_overall_50_2_2021_06_18.tex  profile_curve_overall_50_4_2021_06_18.tex
TueServer_results/results/results_2021_07_08/: CG_summary_2021_07_08.csv
TueServer_results/results/results_2021_07_12/: TUE_server_results_2021_07_12.csv
TueServer_results/template_dir/: comparision_lp_bound_computation.tex  performance_comparision.tex
cmake/: CoinOR.cmake  CompilerWarnings.cmake  Conan.cmake  CppcheckTargets.cmake  FindCppCheck.cmake  FindGlib.cmake  FindGurobi.cmake  FindLcov.cmake  Findcodecov.cmake  Findcppcheck.cmake  Findcppcheck.cpp  SetUpOsi.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  Utils.cmake  Vcpkg.cmake  analysis.cmake  customCppCheck.cmake  dev-tools.cmake
decision-diagrams/cmake/: CompilerWarnings.cmake  Conan.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  Utils.cmake
decision-diagrams/include/ModernDD/: NodeBase.hpp  NodeBddBuilder.hpp  NodeBddDumper.hpp  NodeBddReducer.hpp  NodeBddSpec.hpp  NodeBddStructure.hpp  NodeBddSweeper.hpp  NodeBddTable.hpp  NodeBranchId.hpp  NodeId.hpp
decision-diagrams/include/ModernDD/util/: MyHashTable.hpp
decision-diagrams/test/src/: example1.cpp  example2.cpp  testRandomDd.cpp  testSizeConstraint.cpp
include/: BackwardBDD.hpp  BackwardZDD.hpp  BddCoeff.hpp  BidirectionalBDD.hpp  BranchBoundTree.hpp  BranchHistory.hpp  BranchNode.hpp  CardinalityPaths.hpp  Column.h  DebugLvl.hpp  DurationBDD.hpp  DurationZDD.hpp  FarkasZDD.hpp  ForwardBDD.hpp  ForwardZDD.hpp  Instance.h  Interval.h  Interval_new.h  Job.h  Label.hpp  LocalSearch.hpp  LocalSearch_new.h  MIP_defs.hpp  MipGraph.hpp  ModelInterface.hpp  NodeBase.hpp  NodeBdd.hpp  NodeBddBuilder.hpp  NodeBddDumper.hpp  NodeBddEval.hpp  NodeBddReducer.hpp  NodeBddSpec.hpp  NodeBddStructure.hpp  NodeBddSweeper.hpp  NodeBddTable.hpp  NodeBranchId.hpp  NodeData.h  NodeId.hpp  OptimalSolution.hpp  Parms.h  (+54 more)
include/tdzdd/: DdEval.hpp  DdSpec.hpp  DdSpecOp.hpp  DdStructure.hpp
include/tdzdd/dd/: DataTable.hpp  DdBuilder.hpp  DdReducer.hpp  DdSweeper.hpp  Node.hpp  NodeTable.hpp  PathCounter.hpp  UniqueTable.hpp
include/tdzdd/eval/: Cardinality.hpp  ToZBDD.h
include/tdzdd/op/: BinaryOperation.hpp  Lookahead.hpp  Unreduction.hpp
include/tdzdd/util/: BigNumber.hpp  MemoryPool.hpp  MessageHandler.hpp  MyHashTable.hpp  MyList.hpp  MySet.hpp  MyVector.hpp  ResourceUsage.hpp  demangle.hpp
include/util/: DataTable.hpp  MemoryPool.hpp  MyHashTable.hpp  MyList.hpp  MyVector.hpp
or_utils/: CMakeLists.txt
or_utils/cmake/: ORUtilsConfig.cmake.in
or_utils/include/: binomial-heap.h  defs.h  graph.h  heap.h  lp.h  util.h
or_utils/src/: binomial-heap.c  graph.c  ksubset.c  lp.c  time.c  util.c
results/: new_results_pm.csv  result_talktue2019.csv  results_tue2019_latex_pivot.csv  results_tue2019_summary.csv  results_tue2019aug_summary.csv
results/28augf1S1/: overall.csv
results/CG_results_20191004/: CG_tables_20191004.tex
results/results_21_05_20/: CG_overall_21_05_20.csv
scripts/: cc_args.py  cmake_script.py  color_cuts.py  compute_size_zdd.py  control.ipynb  control.py  exedir.py  generate.py  mip.sh  run_experiments.ps1  script.sh  summary.ipynb  summary.py
scripts/Julia/DAG-cluster-cover/: DAGIntFlow.jl  color_cuts.py  main.jl
scripts/Julia/DAG-cluster-cover/wt007_solutions/: color_cuts.py
scripts/Julia/DAG-cluster-cover/wt008_solutions/: color_cuts.py
scripts/Julia/DAG-cluster-cover/wt010_solutions/: color_cuts.py
scripts/Julia/ZeroHalfCuts/: ZeroHalfCuts.jl
settings/: default_settings.json  default_settings_small.json  gurobi.env
src/: BddCoeff.cpp  BranchBoundTree.cpp  BranchHistory.cpp  BranchNode.cpp  Column.cpp  IO.cpp  IP_models.c  Instance.cpp  Interval.cpp  Interval_new.cpp  Job.cpp  LocalSearch.cpp  LocalSearch_new.cpp  Lowerbound.cpp  Model.cpp  ModelInterface.cpp  NodeBdd.cpp  NodeData.cpp  Parms.cpp  PricerConstruct.hpp  PricerEvaluate.hpp  PricerSolver.cpp  PricerSolver.hpp  PricerSolverArcTimeDP.cpp  PricerSolverBase.cpp  PricerSolverBdd.cpp  PricerSolverBddBackward.cpp  PricerSolverBddForward.cpp  PricerSolverSimpleDP.cpp  PricerSolverWrappers.cpp  PricerSolverZdd.cpp  PricerSolverZddBackward.cpp  PricerSolverZddForward.cpp  PricingStabilization.cpp  Problem.cpp  Scheduleset.cpp  SeperationSolver.cpp  Solution.cpp  Solution_new.cpp  StabilizationWrappers.cpp  (+59 more)
vcpkg-custom-ports/modernbb/: portfile.cmake
vcpkg-custom-ports/moderndd/: portfile.cmake  vcpkg.json
vcpkg-custom-ports/or-utils/: CONTROL  portfile.cmake
